Revision history for {{$dist->name}}

{{$NEXT}}

1.31      2020-07-01 05:28:10 -0600
  - Refuse to install on very old versions of Perl 5.8.1, 5.8.2, 5.8.3 and
    5.10.0t (threads) (Gh#275)
  - Move to new GH org PerlFFI (old org was Perl5-FFI, and will remain to
    keep URL redirection).  The new URL is
    https://github.com/PerlFFI/FFI-Platypus

1.30      2020-06-16 06:51:53 -0600
  - Dropping support for Perl 5.8.1, 5.8.2 and 5.8.3, and the threaded version
    of 5.10.0.  For now Platypus will install on these versions of Perl, but a
    warning will be issued, along with a 45s sleep at configure time and a 180s
    sleep at test time.  Please upgrade to 5.8.4 (or preferrably 5.32).
    Starting July 1st, Platypus will refuse to install on these elderly Perls.
    (gh#271, gh#272)

1.29      2020-06-06 08:40:10 -0600
  - For window (from FFI::Platypus::Buffer), if $size is omitted then
    it will assumed to be a C string and computed using strlen (gh#270)

1.28      2020-05-20 01:43:09 -0600
  - Production release identical to 1.27_01

1.27_01   2020-05-17 18:01:37 -0600
  - Add strcpy to FFI::Platypus::Memory (gh#265)
  - Add window to FFI::Platypus::Buffer (gh#266, gh#267)

1.26      2020-05-07 04:59:17 -0600
  - The return type for the function method can now be omitted and
    defaults to 'void' (gh#262, gh#263)
  - The attach_cast method can now take a wrapper function (gh#261, gh#264)

1.25      2020-05-05 19:40:02 -0600
  - Fixed bug where return type uint64* was being returned as
    sint64* (gh#258, gh#259)

1.24      2020-05-02 16:59:34 -0600
  - Add kindof method (gh#243, gh#254)
  - Add countof method (gh#243, gh#254)
  - Add unitof method (gh#245, gh#254)
  - Add def method (gh#244, gh#248, gh#254)
  - Add hook load_custom_types to the language plugins that allows
    them to define custom types (gh#253)

1.23_01   2020-05-01 11:13:59 -0600
  - Custom record arguments are kept around for the lifetime of the